# E2EE-CLI-Secure-Messenger

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
app/: app_controller.py  interfaces.py  protocol.py
app/repositories/: in_memory_repositories.py
app/services/: chat_service.py  key_exchange_service.py  user_service.py
cli/: cli_app.py  command_catalog.py  formatters.py  status_diagnostics.py  themes.py
docs/: SYSTEM_SPECIFICATION.md  TESTING.md
infrastructure/: crypto.py  minimal_relay_server.py  runtime_transport_gateway.py  websocket_client.py
tests/cli/: test_cli_themes_and_formatters.py
tests/controller/: test_controller_interfaces_ports.py  test_controller_message_flow.py  test_controller_push_notifications.py  test_controller_validation_base.py
tests/integration/: test_cli_runtime_transport_flow.py  test_minimal_relay_server.py  test_phase2_terminal_flow.py  test_relay_runner.py  test_replay_guard_flow.py  test_websocket_client.py
tests/key_exchange/: test_key_exchange_blocking_rules.py  test_key_exchange_clock_port.py  test_key_exchange_reconnect_invalidation.py  test_key_exchange_timeout_and_errors.py  test_key_exchange_validation_base.py
tests/protocol/: test_errors_and_routing.py  test_message_replay_contract.py  test_semantics.py  test_to_rules.py  test_validation_base.py
tests/session/: test_notifications_and_privacy.py  test_reconnect_rules.py  test_session_clock_port.py  test_session_validation_base.py
tests/unit/: test_phase2_docs_alignment.py  (+1 more)
(+3 files in other folders)
